--- a/Authenticator/Base.lproj/ATCMain.storyboard
+++ b/Authenticator/Base.lproj/ATCMain.storyboard
@@ -673,7 +673,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="424" height="512"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <scrollView misplaced="YES" borderType="none" autohidesScrollers="YES" horizontalLineScroll="83" horizontalPageScroll="10" verticalLineScroll="83" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BEz-oe-qrV">
+                            <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="83" horizontalPageScroll="10" verticalLineScroll="83" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BEz-oe-qrV">
                                 <rect key="frame" x="0.0" y="0.0" width="424" height="416"/>
                                 <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="KrV-Uh-5kV">
                                     <rect key="frame" x="0.0" y="0.0" width="424" height="416"/>
@@ -813,8 +813,12 @@
                                     <animations/>
                                 </scroller>
                             </scrollView>
-                            <popUpButton verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nYK-8S-80v">
+                            <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="nYK-8S-80v">
                                 <rect key="frame" x="389" y="480" width="25" height="27"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="26" id="1Kr-8G-fUM"/>
+                                    <constraint firstAttribute="width" constant="25" id="lc2-2u-Dy7"/>
+                                </constraints>
                                 <animations/>
                                 <popUpButtonCell key="cell" type="recessed" bezelStyle="recessed" imagePosition="only" alignment="center" lineBreakMode="truncatingTail" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" pullsDown="YES" arrowPosition="noArrow" id="kvT-ip-f4x">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
@@ -834,7 +838,7 @@
                                     </menu>
                                 </popUpButtonCell>
                             </popUpButton>
-                            <box verticalHuggingPriority="750" misplaced="YES" title="Box" boxType="separator" titlePosition="noTitle" translatesAutoresizingMaskIntoConstraints="NO" id="QXz-hh-4zp">
+                            <box verticalHuggingPriority="750" title="Box" boxType="separator" titlePosition="noTitle" translatesAutoresizingMaskIntoConstraints="NO" id="QXz-hh-4zp">
                                 <rect key="frame" x="0.0" y="414" width="424" height="5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="424" id="O4p-gg-4bK"/>
@@ -844,6 +848,18 @@
                                 <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <font key="titleFont" metaFont="system"/>
                             </box>
+                            <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="yD9-ie-RIJ" customClass="ATCHintField">
+                                <rect key="frame" x="20" y="449" width="384" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="24" id="0Qh-tq-fsn"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="384" id="2a4-Bl-p0u"/>
+                                </constraints>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="rQ9-U2-Uhu">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
                         </subviews>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="BEz-oe-qrV" secondAttribute="bottom" id="16E-JS-gsc"/>
@@ -853,9 +869,12 @@
                             <constraint firstItem="BEz-oe-qrV" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" id="J3b-U6-LWe"/>
                             <constraint firstItem="BEz-oe-qrV" firstAttribute="top" secondItem="QXz-hh-4zp" secondAttribute="bottom" id="Nzb-GC-6S7"/>
                             <constraint firstAttribute="trailing" secondItem="nYK-8S-80v" secondAttribute="trailing" constant="10" id="SUr-Dc-6wz"/>
-                            <constraint firstItem="BEz-oe-qrV" firstAttribute="top" secondItem="nYK-8S-80v" secondAttribute="bottom" constant="65" id="Uee-jb-AFu"/>
+                            <constraint firstAttribute="trailing" secondItem="yD9-ie-RIJ" secondAttribute="trailing" constant="20" id="d4H-6m-2gs"/>
+                            <constraint firstItem="yD9-ie-RIJ" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="20" id="eDj-HS-dD5"/>
+                            <constraint firstItem="QXz-hh-4zp" firstAttribute="top" secondItem="yD9-ie-RIJ" secondAttribute="bottom" constant="32" id="epH-6W-dmj"/>
                             <constraint firstAttribute="trailing" secondItem="BEz-oe-qrV" secondAttribute="trailing" id="qvd-78-naX"/>
                             <constraint firstItem="nYK-8S-80v" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="5" id="r1F-S0-eK1"/>
+                            <constraint firstItem="yD9-ie-RIJ" firstAttribute="top" secondItem="nYK-8S-80v" secondAttribute="bottom" constant="8" id="rQK-YN-48M"/>
                         </constraints>
                         <animations/>
                         <connections>
