Renamed ATCRefreshTimer with a more suitable name

--- a/Authenticator/Base.lproj/ATCMain.storyboard
+++ b/Authenticator/Base.lproj/ATCMain.storyboard
@@ -643,7 +643,7 @@
                 </application>
                 <customObject id="Voe-Tx-rLC" customClass="ATCAppDelegate"/>
                 <customObject id="Ady-hI-5gd" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
-                <customObject id="0RB-tK-YKz" customClass="ATCRefreshingTimer"/>
+                <customObject id="0RB-tK-YKz" customClass="ATCNotificationCenter"/>
             </objects>
             <point key="canvasLocation" x="75" y="0.0"/>
         </scene>
